# embedded-software

./: .gitignore  CMakeLists.txt  Kconfig  README.md  README.rst  nrf9160dk_nrf9160_ns.overlay  prj.conf  sample.yaml
Libs/: licence.txt
Libs/niq/Inc/: niq.h
Projects/QANI/FreeRTOS/QANI-FreeRTOS-Common/: main.c
Src/AppConfig/DefaultConfigs/QANI/: fira_device_config.h
Src/Apps/Src/fira/: create_fira_app_task.h  fira_app.h  fira_app_config.c  fira_dw3000.c
Src/Boards/Inc/: thisBoard.h
Src/Comm/Src/BLE/: app_ble.h  ble.c  nrf9160_power_mode_manager.c  nrf9160_power_mode_manager.h
Src/EventManager/: EventManager.h
Src/HAL/Inc/: HAL_uwb.h  HAL_watchdog.h
Src/HAL/Src/nrfx/: HAL_error.c
Src/Helpers/: crc16.c
Src/UWB/: dw3000_calib_mcu.c  dw3000_mcps_wrapper.h  dw3000_statistics.h
boards/: nrf7002dk_nrf5340_cpuapp.conf
src/: location.c  location.h  main.c
src/Dispatcher/: Dispatcher.c  Dispatcher.h
src/LocationEngine/: LocationEngine.c
src/Responder/: Responder.c
src/SmsListener/: SmsListener.c  SmsListener.h
src/UDPListener/: UDPListener.c
src/common/: message_channel.c  message_channel.h
src/modules/ble_scanner/: CMakeLists.txt  Kconfig.ble_scanner  ble_scanner.c
src/modules/error/: Kconfig.error  error.c
src/modules/network/: CMakeLists.txt  Kconfig.network  network_wifi.c
src/modules/sampler/: CMakeLists.txt  sampler.c
src/modules/transport/: Kconfig.transport  transport.c
src/modules/transport/client_id/: client_id.c  client_id.h
src/modules/trigger/: Kconfig.trigger  trigger.c
src/mqtt/: mqtt.c  mqtt.h  mqttsn.c  mqttsn.h
(+21 files in other folders)
